force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/Ad_Group_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>AD Group Mapping for all or orgs</description>
    <label>Ad Group Mapping</label>
    <pluralLabel>Ad Group Mappings</pluralLabel>
</CustomObject>