force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/Create_User__c.field-meta.xml
<CustomField>
    <fullName>Create_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the login script needs to create the user and associated contact for a persona</description>
    <inlineHelpText>This field indicates whether the login script needs to create the user and associated contact for a persona</inlineHelpText>
    <label>Create User</label>
    <type>Checkbox</type>
</CustomField>