force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/GWB_Region__c.field-meta.xml
<CustomField>
    <fullName>GWB_Region__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.GWB_Region__c, &apos;NA&apos;), &apos;NA&apos;, IF(ISPICKVAL($User.GWB_Region__c, &apos;EU&apos;), &apos;EU&apos;, IF(ISPICKVAL($User.GWB_Region__c, &apos;SA&apos;), &apos;SA&apos;, IF(ISPICKVAL($User.GWB_Region__c, &apos;SK&apos;), &apos;SK&apos;, 
IF(ISPICKVAL($User.GWB_Region__c, &apos;MEO&apos;), &apos;MEO&apos;,
IF(ISPICKVAL($User.GWB_Region__c, &apos;GMSA&apos;), &apos;GMSA&apos;,
IF(ISPICKVAL($User.GWB_Region__c, &apos;IO&apos;), &apos;IO&apos;,&apos;&apos;)))))))</defaultValue>
    <description>Functional Description: OCRM Region field for regional sharing
Used in Integration: N
Bi-Directional Sync: N
User Story #: 4418148</description>
    <label>GWB Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>MEO</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>GMSA</fullName>
            </value>
            <value>
                <fullName>IO</fullName>
                <isActive>false</isActive>
                <label>IO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>