force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/Locale_Type__c.field-meta.xml
<CustomField>
    <fullName>Locale_Type__c</fullName>
    <label>Locale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English (United States)</fullName>
                <default>true</default>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>&apos;English (United Kingdom)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>