force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <label>LocaleSidKey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>