force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/PriorityNbr__c.field-meta.xml
<CustomField>
    <fullName>PriorityNbr__c</fullName>
    <label>Priority</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>