force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/PublicGroupName__c.field-meta.xml
<CustomField>
    <fullName>PublicGroupName__c</fullName>
    <label>PublicGroupName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>