force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/TelephonyPackageLicenseName__c.field-meta.xml
<CustomField>
    <fullName>TelephonyPackageLicenseName__c</fullName>
    <label>TelephonyPackageLicenseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>