force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/fields/UserPersonaMappingName__c.field-meta.xml
<CustomField>
    <fullName>UserPersonaMappingName__c</fullName>
    <label>UserPersonaMappingName</label>
    <type>TextArea</type>
</CustomField>