force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PermissionGroupSetName__c</columns>
    <columns>PriorityNbr__c</columns>
    <columns>ProfileGroupName__c</columns>
    <columns>PublicGroupName__c</columns>
    <columns>UserPersonaMappingName__c</columns>
    <columns>CallCenterName__c</columns>
    <columns>TelephonyPackageLicenseName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>