force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/listViews/Messaging_NA.listView-meta.xml
<ListView>
    <fullName>Messaging_NA</fullName>
    <columns>MasterLabel</columns>
    <columns>UserPersonaMappingName__c</columns>
    <columns>ProfileGroupName__c</columns>
    <columns>PermissionGroupSetName__c</columns>
    <columns>PublicGroupName__c</columns>
    <columns>DeveloperName</columns>
    <columns>LocaleSidKey__c</columns>
    <columns>Locale_Type__c</columns>
    <columns>GWB_Region__c</columns>
    <columns>TelephonyPackageLicenseName__c</columns>
    <columns>CallCenterName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>ocrm_msg_</value>
    </filters>
    <label>Messaging - NA</label>
    <language>en_US</language>
</ListView>