force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Ad_Group_Mapping__mdt/listViews/OCRM_Record.listView-meta.xml
<ListView>
    <fullName>OCRM_Record</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PriorityNbr__c</columns>
    <columns>PermissionGroupSetName__c</columns>
    <columns>UserPersonaMappingName__c</columns>
    <columns>ProfileGroupName__c</columns>
    <filterScope>Everything</filterScope>
    <label>OCRM Record</label>
    <language>en_US</language>
</ListView>